--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ class NuclearReactorTest extends TestCase
 								<h3>PROS</h3>
 								<ul>
 									<li class="fragment">Easy to setup and use</li>
-									<li class="fragment">Could spot critical bugs</li>
+									<li class="fragment">Might spot critical bugs</li>
 									<li class="fragment">Improves your testing skills</li>
 								</ul>
 							</td>	
@@ -425,7 +425,7 @@ class NuclearReactorTest extends TestCase
 
 				<section>
 					<h3>How to use it?</h3>
-					<p class="fragment">To assess the effectivness of a testsuite!</p>
+					<p class="fragment">To assess the effectiveness of a testsuite!</p>
 					<p class="fragment">Setting a minimum MSI in pipeline</p>
 					<p class="fragment">While developing a new feature, on a small scope</p>
 				</section>
@@ -448,7 +448,7 @@ class NuclearReactorTest extends TestCase
 				</section>
 
 				<section data-auto-animate>
-					<h1>THANKS!</h1>
+					<h1>THANK YOU!</h1>
 					<small>
 						<a>Antonello D'Ippolito</a> | 
 						<a href="https://twitter.com/antodippo" target="_blaak">twitter.com/antodippo</a> | 
