--- a/index.html
+++ b/index.html
@@ -39,16 +39,22 @@
 					</style>
 					<div class="container">
 						<div class="col">
-							<img height="400px" src="img/connect.png">
+							<img src="img/mollie.png">
+							<img height="300px" src="img/connect.png">
 						</div>					
 						<div class="col" style="text-align: left;">
+							<br/>
 							<h2>CIAO!</h2>
 							<h3>Antonello D'Ippolito</h3>
-							<small>Software engineer</small></br>
+							<small>Software engineer</small>
 							<p>@antodippo</p>
 							<p id="heartrate"></p>
 						</div>
 					</div>
+				</section>
+
+				<section>
+					<h2>Let's make it interactive!</h2>
 				</section>
 
 				<section>
@@ -65,6 +71,10 @@
 						<b>Test coverage</b> is a measure used to describe the degree to which the source 
 						code of a program is executed when a particular test suite runs
 					</blockquote>
+				</section>
+
+				<section>
+					<h2>Poll time!</h2>
 				</section>
 
 				<section data-auto-animate>
@@ -170,7 +180,7 @@ class NuclearReactorTest extends TestCase
 						High cyclomatic complexity means:
 						<li class="fragment">code is hard to understand</li>					
 						<li class="fragment">code is hard to test properly</li>
-						<li class="fragment">therefore code is hard to change</li>
+						<li class="fragment">code is hard to change</li>
 				</section>
 
 				<section>
@@ -220,6 +230,10 @@ class NuclearReactorTest extends TestCase
 				<section>
 					<img src="img/churn-php.png">
 					<p><a target="_blank" href="https://github.com/bmitch/churn-php">https://github.com/bmitch/churn-php</a></p>
+				</section>
+
+				<section>
+					<h2>Poll time!</h2>
 				</section>
 
 				<section>
@@ -303,12 +317,7 @@ class NuclearReactorTest extends TestCase
 				</section>
 
 				<section>
-					<div style='position: relative; padding-bottom: 56.25%; padding-top: 35px; height: 0; overflow: hidden;'>
-						<iframe sandbox='allow-scripts allow-same-origin allow-presentation' allowfullscreen='true' allowtransparency='true' 
-						frameborder='0' height='315' src='https://www.mentimeter.com/app/presentation/al5ajgit5w1c6y3kea5dg6rtv6wwxo1i/onhpjns76has' 
-						style='position: absolute; top: 0; left: 0; width: 100%; height: 100%;' width='420'>
-						</iframe>
-					</div>
+					<h2>Poll time!</h2>
 				</section>
 
 				<section>
@@ -467,7 +476,9 @@ class NuclearReactorTest extends TestCase
 					<small>
 						Try Infection and other testing tools here:<br/>
 						<a href="https://github.com/antodippo/php-testing-playground" target="_blaak">
-							https://github.com/antodippo/php-testing-playground</a>
+							https://github.com/antodippo/php-testing-playground</a><br/><br/>
+						Feedback! <br/>
+						<img height="200px" src="img/qr-pugmi.png">
 					</small>
 				</section>
 
