--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<section>
 					<h2>How can I trust my testsuite?</h2>
 					<h5>Antonello D'Ippolito</h5>
-					<small>PUG Milano, 22/2/23</small>
+					<small>Targeting Quality, 19/9/23</small>
 				</section>
 
 				<section data-auto-animate>
@@ -54,10 +54,6 @@
 				</section>
 
 				<section>
-					<h2>Let's make it interactive!</h2>
-				</section>
-
-				<section>
 					<p>Sher<b>code</b> Holmes</p>
 					<img class="r-stretch" src="img/sherlock.png">
 				</section>
@@ -71,10 +67,6 @@
 						<b>Test coverage</b> is a measure used to describe the degree to which the source 
 						code of a program is executed when a particular test suite runs
 					</blockquote>
-				</section>
-
-				<section>
-					<h2>Poll time!</h2>
 				</section>
 
 				<section data-auto-animate>
@@ -164,12 +156,6 @@ class NuclearReactorTest extends TestCase
 				</section>
 
 				<section>
-					PHPUnit dashboard<br/>
-					<img src="img/comp-cover-phpunit.png">
-					<img src="img/CRAP-phpunit.png">
-				</section>
-
-				<section>
 					<blockquote cite="Wikipedia">
 						<b>Cyclomatic complexity</b> is a quantitative measure of the number of 
 						linearly independent paths through a program's source code
@@ -178,9 +164,9 @@ class NuclearReactorTest extends TestCase
 
 				<section>
 						High cyclomatic complexity means:
-						<li class="fragment">code is hard to understand</li>					
-						<li class="fragment">code is hard to test properly</li>
-						<li class="fragment">code is hard to change</li>
+						<p class="fragment">code is hard to understand</p>					
+						<p class="fragment">code is hard to test properly</p>
+						<p class="fragment">code is hard to change</p>
 				</section>
 
 				<section>
@@ -233,10 +219,6 @@ class NuclearReactorTest extends TestCase
 				</section>
 
 				<section>
-					<h2>Poll time!</h2>
-				</section>
-
-				<section>
 					<img class="r-stretch" src="img/sherlock.png">
 					<blockquote cite="">
 						Better, but it's still about coverage,</br>
@@ -252,7 +234,7 @@ class NuclearReactorTest extends TestCase
 				</section>
 
 				<section>
-					<p>Mocks<br/>vs<br/>Mocking frameworks<br/>vs<br/>Test doubles</p>
+					<p>Test doubles<br/>vs<br/>Mocking frameworks<br/>vs<br/>Mocks</p>
 				</section>
 
 
@@ -308,16 +290,19 @@ class NuclearReactorTest extends TestCase
 				</section>
 
 				<section>
+					<img class="r-stretch" src="img/sherlock.png">
+					<blockquote cite="">
+						Cool, but let's find metrics!</br>
+					</blockquote>
+				</section>
+
+				<section>
 					<img class="r-stretch" src="img/mutant.png"> 
 					<p>Mutation testing</p>
 				</section>
 
 				<section>
 					If you make a change that alters the meaning of your code, will one of your tests detect it?
-				</section>
-
-				<section>
-					<h2>Poll time!</h2>
 				</section>
 
 				<section>
@@ -358,19 +343,6 @@ class NuclearReactor
   }
 }
 					</code></pre>
-				</section>
-
-				<section data-auto-animate>
-					<img src="img/infection-logo.png" width="300"><br/>
-					Infection - PHP Mutation Testing Framework<br/>
-					<a href="https://infection.github.io/" target="_blank">https://infection.github.io/</a>
-				</section>
-
-				<section data-auto-animate>
-					<img width="300" src="img/phpunit.png"> <br/>
-					<img width="300" src="img/phpspec.png"> <br/>
-					<img width="400" src="img/codeception.png"> <br/>
-					<img width="300" src="img/pest.png">
 				</section>
 
 				<section>
@@ -421,8 +393,8 @@ class NuclearReactorTest extends TestCase
 							<td width="450" style="font-size: 27px;">
 								<h3>PROS</h3>
 								<ul>
-									<li class="fragment">Easy to setup and use</li>
-									<li class="fragment">Might spot critical bugs</li>
+									<li class="fragment">Easy to setup and run</li>
+									<li class="fragment">Might spot potential critical bugs</li>
 									<li class="fragment">Improves your testing skills</li>
 								</ul>
 							</td>	
@@ -469,16 +441,10 @@ class NuclearReactorTest extends TestCase
 				<section data-auto-animate>
 					<h1>THANK YOU!</h1>
 					<small>
-						<a>Antonello D'Ippolito</a> | 
-						<a href="https://twitter.com/antodippo" target="_blaak">twitter.com/antodippo</a> | 
+						<a href="https://twitter.com/antodippo" target="_blaak">Twitter: @antodippo</a> | 
+						<a href="https://fosstodon.org/@antodippo" target="_blaak">Mastodon: @antodippo</a> | 
 						<a href="https://antodippo.com" target="_blaak">antodippo.com</a>
-					</small>
-					<small>
-						Try Infection and other testing tools here:<br/>
-						<a href="https://github.com/antodippo/php-testing-playground" target="_blaak">
-							https://github.com/antodippo/php-testing-playground</a><br/><br/>
-						Feedback! <br/>
-						<img height="200px" src="img/qr-pugmi.png">
+				
 					</small>
 				</section>
 
@@ -515,7 +481,7 @@ class NuclearReactorTest extends TestCase
 						async: true, 
 						callback: function() { 
 							title_footer.initialize(
-								'How can I trust my testsuite? | Antonello D\'Ippolito | @antodippo | PUG Milano 22/2/23'
+								'How can I trust my testsuite? | Antonello D\'Ippolito | @antodippo | Targeting Quality, 19/9/23'
 							); 
 						}
 					}
